--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+/*
+Colors
+rgba (0.113.188.1) 
+rgba (0.57.94.1) 
+rgba (0.28.47.1) 
+rgba (11.71.111)
+*/
+
 /*******************************************************************/ 
 /* 			GLOBAL ITEMS 		 		/
 /*******************************************************************/
