--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,17 @@ a{
 }
 
 /*******************************************************************/ 
+/* 			Layout 		 		/
+/*******************************************************************/
+.middle {
+	background-color: red;
+	margin-left: 5%;
+	margin: 5%;
+	width: 90%;
+	text-align: center;
+}
+
+/*******************************************************************/ 
 /* 			Index Page 		 		/
 /*******************************************************************/
 
