--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,9 @@ html, body{
 /*******************************************************************/ 
 /* 			Extra Page		 		/
 /*******************************************************************/
-
+paragraph {
+	font-size: 12px;
+}
 
 
 /*******************************************************************/ 
