--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ p, h1, h2, h3, h4, h5, h6, a, ul, li {
 .button {
   margin-top: -8px;
   display: inline-block;
-  width: 90%;
+  width: 150px;
   font-size: 1em;
   cursor: pointer;
   text-align: center;
