--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,9 @@ html, body{
 p, h1, h2, h3, h4, h5, h6, a, ul, li {
     font-family: 'Raleway', sans-serif;
 } 
-
+a {
+	text-decoration: none; display: inline; color: black;
+}
 .title {
 	color: rgba(0,57,94,1);
 	margin-top: 35px;
