--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 /*
 Colors
-rgba(0,113,188,1) light blue 
+rgba(0,113,188,1) light blue
 rgba(0,28,47,1) dark blue
 rgba(0,57,94,1) less dark blue
 rgba(0,90,160,1) blue
 */
 
-/*******************************************************************/ 
+/*******************************************************************/
 /* 			GLOBAL ITEMS 		 		/
 /*******************************************************************/
 *{
@@ -17,10 +17,11 @@ html, body{
 	color: rgba(0,28,47,1);
 	font-size:18px;
 	font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+	background-color: rgb(222, 238, 220);
 }
 p, h1, h2, h3, h4, h5, h6, a, ul, li {
     font-family: 'Raleway', sans-serif;
-} 
+}
 a {
 	text-decoration: none; display: inline; color: black;
 }
@@ -95,7 +96,7 @@ a {
 
 	  }
 
-/*******************************************************************/ 
+/*******************************************************************/
 /* 			Layout 		 		/
 /*******************************************************************/
 .middle {
@@ -105,20 +106,20 @@ a {
 	margin-left: 5%;
 }
 
-/*******************************************************************/ 
+/*******************************************************************/
 /* 			Index Page 		 		/
 /*******************************************************************/
 
 
 
-/*******************************************************************/ 
+/*******************************************************************/
 /* 			Extra Page		 		/
 /*******************************************************************/
 
 
 
 
-/*******************************************************************/ 
+/*******************************************************************/
 /* 			Level 1, 2, 3, 4, 5	 		/
 /*******************************************************************/
 #selectcontainer {
@@ -168,7 +169,7 @@ a {
 	clear: both;
 
 }
-/*******************************************************************/ 
+/*******************************************************************/
 /* 			Navigation		 		/
 /*******************************************************************/
 .level {
@@ -203,7 +204,7 @@ nav {
 
 
 
-/*******************************************************************/ 
+/*******************************************************************/
 /* 			mediaqueri		 		/
 /*******************************************************************/
 @media screen and (max-width: 768px) {
@@ -219,7 +220,7 @@ nav {
 	}
 	.title {
 	color: rgba(0,57,94,1);
-	font-size: 2.5em;
+	font-size: 1.0em;
 }
 	#selectcontainer {
 	margin: auto;
