--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,7 @@ nav {
 	.button {
   margin-top: -8px;
   padding: 15px 105px;
-  width: auto;
+  width: 40%;
 	}
 }
 @media screen and (min-width: 1200px) {
