Styling fixed for wheel

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html, body{
 	color: rgba(0,28,47,1);
 	font-size:18px;
 	font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
-	background-color: rgb(222, 238, 220);
+	background-color: hsl(194, 100%, 87%);
 }
 p, h1, h2, h3, h4, h5, h6, a, ul, li {
     font-family: 'Raleway', sans-serif;
