--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,22 @@ a {
 		  margin-top: 24%;
 
 	  }
+#background {
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	z-index: -10;
+	top: 0;
+}
+#plante {
+	position: fixed;
+	width: 10%;
+	height: auto;
+	bottom: 6%;
+	right: 6%;
+		z-index: -9;
 
+}
 /*******************************************************************/
 /* 			Layout 		 		/
 /*******************************************************************/
