--- a/css/style.css
+++ b/css/style.css
@@ -159,8 +159,10 @@ main {
 .leveltext {
 	width: 65%;
 	text-align: left;
-	margin: auto;
-	padding-left: 5%;
+	margin: auto 20px;
+	padding: 7% 4%;
+	background-color: rgba(255,255,255,0.5);
+	border-radius: 20px;
 }
 .leveltext:active {
 	color:rgba(0,90,160,1);
@@ -171,26 +173,24 @@ main {
 	height: 30%;
 }
 #level2 {
-	width: 32%;
-	height: 32%;
+	width: 30%;
+	height: 30%;
 }
 #level3 {
-	width: 33%;
-	height: 33%;
-	margin-left: -1%;
+	width: 30%;
+	height: 30%;
 }
 #level4 {
 	width: 30%;
 	height: 30%;
 }
 #level5 {
-	width: 43%;
-	height: 43%;
+	width: 30%;
+	height: 30%;
 }
 .seperator {
 	width: 100%;
 	height: 2px;
-	background-color: rgba(212,212,212,1.00);
 	margin: 30px 0 30px 0;
 	clear: both;
 
