--- a/css/style.css
+++ b/css/style.css
@@ -142,8 +142,9 @@ main {
 /* 			Extra Page		 		/
 /*******************************************************************/
 
-
-
+#extrapageimage {
+	width: 100%;
+}
 
 /*******************************************************************/
 /* 			Level 1, 2, 3, 4, 5	 		/
