--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,9 @@ main {
 .button {
   margin-top: -8px;
   display: inline-block;
-  width: 150px;
   font-size: 1em;
   cursor: pointer;
+	width: 70%;
   text-align: center;
   text-decoration: none;
   outline: none;
@@ -106,13 +106,7 @@ main {
 		  margin-top: 24%;
 
 	  }
-#background {
-	position: fixed;
-	width: 100%;
-	height: 100vh;
-	z-index: -10;
-	top: 0;
-}
+
 #plante {
 	position: fixed;
 	width: 10%;
@@ -121,6 +115,15 @@ main {
 	right: 6%;
 		z-index: -9;
 
+}
+#question {
+	position: fixed;
+	bottom: 0;
+	margin: 0 0 10px 10px;
+	width: 5%;
+}
+#hulk {
+	padding-bottom: 30px;
 }
 /*******************************************************************/
 /* 			Layout 		 		/
@@ -255,6 +258,18 @@ nav a {
 		width: 100%;
 		margin-left: 2%;
 	}
+	#plante {
+	position: fixed;
+	width: 30%;
+	height: auto;
+	bottom: 6%;
+	right: 6%;
+		z-index: -9;
+
+}
+#question {
+		width: 10%;
+}
 }
 @media screen and (min-width: 768px) {
 	.button {
