--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ main {
 	z-index: -10;
 	top:0;
 }
-.title {
+.title{
 	color: rgba(0,57,94,1);
 	margin-top: 35px;
 	margin-bottom: 35px;
@@ -250,7 +250,8 @@ main {
 /* LOADING SCREEN */
 #sketch > canvas {
 border: 1px solid rgba(25,25,200,0.3);
-border-radius: 15px;}
+border-radius: 15px;
+margin-top: 51px; margin-bottom: 45px;}
 /*******************************************************************/
 /* 			Navigation		 		/
 /*******************************************************************/
@@ -316,6 +317,9 @@ nav a {
 }
 #question {
 		width: 10%;
+}
+#sketch > canvas{
+	margin-top: 19px;
 }
 }
 @media screen and (min-width: 768px) {
